--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
       <h3 style="color: #f5c97b;">Tipo de Molho:</h3>
       <div class="checkbox-group">
-        <label><input type="radio" name="tipoMolho" value="Branco">Branco</label>
-        <label><input type="radio" name="tipoMolho" value="Tomate">Tomate</label>
-        <label><input type="radio" name="tipoMolho" value="Camarão">Camarão</label>
-        <label><input type="radio" name="tipoMolho" value="Dois Molhos">Dois Molhos</label>
+        <label><input type="checkbox" name="tipoMolho" value="Branco">Branco</label>
+        <label><input type="checkbox" name="tipoMolho" value="Tomate">Tomate</label>
+        <label><input type="checkbox" name="tipoMolho" value="Camarão">Camarão</label>
+        <label><input type="checkbox" name="tipoMolho" value="Dois Molhos">Dois Molhos</label>
       </div>
     </div>
 
